--- a/otherwebsites.html
+++ b/otherwebsites.html
@@ -26,12 +26,12 @@
   <body>
     <script src="script.js"></script>
   <div class="topnav" id="myTopnav">
-  <a href="/index.html"><img id="five" src="https://media.discordapp.net/attachments/677300599255072781/873962174412894218/the_sky_is_where_i_belong_1.png"></img></a>
-  <a href="/aerospacepictures.html">Aerospace Pictures</a>
-  <a href="/aerospacevideos.html">Aerospace Videos</a>
-  <a href="/drawings.html">Drawings</a>
-  <a href="/mysocials.html">My Socials</a>
-  <a href="/otherwebsites.html">Other Websites</a>
+  <a href="index.html"><img id="five" src="https://media.discordapp.net/attachments/677300599255072781/873962174412894218/the_sky_is_where_i_belong_1.png"></img></a>
+  <a href="aerospacepictures.html">Aerospace Pictures</a>
+  <a href="aerospacevideos.html">Aerospace Videos</a>
+  <a href="drawings.html">Drawings</a>
+  <a href="mysocials.html">My Socials</a>
+  <a href="otherwebsites.html">Other Websites</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
   <br><br><br><br>
