--- a/aerospacevideos.html
+++ b/aerospacevideos.html
@@ -42,28 +42,28 @@
 <h2 id="three" style="color: #00B8FF">Flying Videos</h2>
  <center> <div class="flex-container">
       <div><video width="400" controls>
-  <source src="/videos/kmcilanding.mp4" type="video/mp4">
+  <source src="videos/kmcilanding.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">A video of the landing at KMCI on runway 1R with my instructor at the controls due to an airliner chasing us!</p></div>
 
  <div><video width="400" controls>
-  <source src="/videos/kmcilanding2.mp4" type="video/mp4">
+  <source src="videos/kmcilanding2.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">The video of the actual touchdown on runway 1R! Continuation from the previous video.</p></div>
  <div><video width="400" controls>
-  <source src="/videos/sunsetflight.mp4" type="video/mp4">
+  <source src="videos/sunsetflight.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">Flying in the sunset. Video taken by my parents while of me taking off.</p></div>
          <div><video width="400" controls>
-  <source src="/videos/planeballoons.mp4" type="video/mp4">
+  <source src="videos/planeballoons.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">A small video of hot air balloons that my instructor took while I was at the controls.</p></div>
          <div><video width="400" controls>
-  <source src="/videos/hotairballoons.mp4" type="video/mp4">
+  <source src="videos/hotairballoons.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">Another small video of hot air balloons that my instructor took while I was at the controls. Love seeing hot air balloons in the air as I don't see them as much especally during this time of year!</p></div>
@@ -72,12 +72,12 @@
     <h2 id="three" style="color: #00B8FF">First Solo Videos</h2>
     <center><div class="flex-container">
       <div><video width="400" controls>
-  <source src="/videos/firstsolotakeoff.mp4" type="video/mp4">
+  <source src="videos/firstsolotakeoff.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">A video of my first takeoff during my first solo flight!</p></div>
             <div><video width="400" controls>
-  <source src="/videos/firstsolotaxiback.mp4" type="video/mp4">
+  <source src="videos/firstsolotaxiback.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 <p id="four">A video of me taxiing back to East 2 after completing my first solo flight!</p></div>
