--- a/otherwebsites.html
+++ b/otherwebsites.html
@@ -26,7 +26,7 @@
   <body>
     <script src="script.js"></script>
   <div class="topnav" id="myTopnav">
-  <a href="index.html"><img id="five" src="https://media.discordapp.net/attachments/677300599255072781/873962174412894218/the_sky_is_where_i_belong_1.png"></img></a>
+  <a href="index.html"><img id="five" src="favicon.png"></img></a>
   <a href="aerospacepictures.html">Aerospace Pictures</a>
   <a href="aerospacevideos.html">Aerospace Videos</a>
   <a href="drawings.html">Drawings</a>
